[package]
name = "timmytime"
version = "0.1.0"
authors = ["Simon Bergstrom <simonbrgstrm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
reqwest = { version = "0.11.22" }
tokio = { version = "1", features = ["full"] }
