[package]
name = "timmytime"
version = "0.1.0"
authors = ["Simon Bergstrom <simonbrgstrm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
confy = "0.5.1"
curl = "0.4.44"
reqwest = { version = "0.11.22" }
serde = "1.0.190"
serde_derive = "1.0.190"
tokio = { version = "1", features = ["full"] }
toml = "0.8.6"
